gitops/sqlite-backup/paperless-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
    spec:
      securityContext:
        runAsNonRoot: false
        fsGroup: 1000
      automountServiceAccountToken: true
      containers:
      - name: paperless
        image:  ghcr.io/paperless-ngx/paperless-ngx:2.18.2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
        livenessProbe:
          failureThreshold: 6
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 8000
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 8000
        resources:
          requests:
            cpu: 50m
            memory: 400Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - SETUID
            - SETGID
            - FOWNER
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /data
          name: paperless-nfs
        # - mountPath: /data/in
        #   name: paperless-s3
      - name: litestream
        image: litestream/litestream:0.3.13
        args:
        - 'replicate'
        volumeMounts:
        - mountPath: /data
          name: paperless-nfs
        - name: configmap
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
        ports:
        - name: metrics
          containerPort: 9090
      volumes:
      - name: paperless-nfs
        persistentVolumeClaim:
          claimName: paperless-test-local
      # - name: paperless-s3
      #   persistentVolumeClaim:
      #     claimName: paperless-s3
      - name: configmap
        configMap:
          name: litestream-paperless


---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  selector:
    app.kubernetes.io/name: paperless
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: http
  - name: metrics
    protocol: TCP
    port: 8081
    targetPort: metrics

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-http
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  rules:
  - host: paperless-backup-test.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8000
